--- a/utilities/inst/configs/config-plots.yaml
+++ b/utilities/inst/configs/config-plots.yaml
@@ -1,23 +1,44 @@
 font: Helvetica-Narrow
-color:
-  standard:
-  - '#8A9DA3'
-  - '#C7351E'
-  - '#5BBCD6'
-  - '#7B6DA8'
-  - '#F9AD00'
-  - '#00A08A'
-  - '#ECCBAE'
-  - '#046C9A'
-colorblind:
-  - '#999999'
-  - '#D55E00'
-  - '#56B4E9'
-  - '#CC79A7'
-  - '#000000'
-  - '#009E73'
-  - '#E69F00'
-  - '#0072B2'
+colors:
+  base_case: '#000004FF'
+  intervention_1: '#1B0C42FF'
+  intervention_2: '#4B0C6BFF'
+  intervention_3: '#781C6DFF'
+  intervention_4: '#A52C60FF'
+  intervention_5: '#CF4446FF'
+  scenario_1: '#ED6925FF'
+  scenario_2: '#FB9A06FF'
+shapes:
+  base_case: 0
+  intervention_1: 1
+  intervention_2: 2
+  intervention_3: 3
+  intervention_4: 4
+  intervention_5: 5
+  scenario_1: 6
+  scenario_2: 7
+linetypes:
+  base_case: 'solid'
+  intervention_1: 'dashed'
+  intervention_2: 'dotted'
+  intervention_3: 'dotdash'
+  intervention_4: 'longdash'
+  intervention_5: 'twodash'
+  scenario_1: '4C88C488'
+  scenario_2: '12345678'
+labels:
+  base_case: Base case
+  intervention_1: TLTBI for new immigrants
+  intervention_2: Improved TLTBI in the US
+  intervention_3: Better case detection
+  intervention_4: Better TB treatment
+  intervention_5: All improvements
+  scenario_1: |-
+    No transmission within
+    the US after 2016
+  scenario_2: |-
+    No LTBI among
+    immigrants after 2016
 region:
   year:
     - 2000.0
