--- a/utilities/inst/configs/config-estimates.yaml
+++ b/utilities/inst/configs/config-estimates.yaml
@@ -90,14 +90,14 @@ outcomes:
   - pct_mdrtb_in_incident_tb
   - tb_deaths_per_mil
   labels:
-    tb_infection_per_mil: New TB infections
+    tb_infection_per_mil: Incident M. tb Infections
     pct_ltbi: LTBI prevalence
     tb_incidence_per_mil: TB incidence
     pct_mdrtb_in_incident_tb: MDR-TB in Incident TB cases
     tb_deaths_per_mil: TB-related deaths
   formatted:
     tb_infection_per_mil: |-
-      New TB Infections
+      Incident M. tb Infections
       (per million)
     pct_ltbi: |-
       LTBI Prevalence
