--- a/utilities/inst/configs/config-trends.yaml
+++ b/utilities/inst/configs/config-trends.yaml
@@ -87,10 +87,10 @@ outcomes:
   - tb_deaths_per_mil
   labels:
     tb_infection_per_mil: Incident M. tb Infections
-    pct_ltbi: LTBI prevalence
-    tb_incidence_per_mil: TB incidence
+    pct_ltbi: LTBI Prevalence
+    tb_incidence_per_mil: Active TB Incidence
     pct_mdrtb_in_incident_tb: MDR-TB in Incident TB cases
-    tb_deaths_per_mil: TB-related deaths
+    tb_deaths_per_mil: TB-Related Deaths
   formatted:
     tb_infection_per_mil: |-
       Incident M. tb Infections
@@ -99,7 +99,7 @@ outcomes:
       LTBI Prevalence
       (percentage)
     tb_incidence_per_mil: |-
-      TB Incidence
+      Active TB Incidence
       (per million)
     pct_mdrtb_in_incident_tb: |-
       MDR-TB in Incident TB Cases
