--- a/utilities/inst/configs/config-agegroups.yaml
+++ b/utilities/inst/configs/config-agegroups.yaml
@@ -145,9 +145,19 @@ analyses:
   values:
   - scenario_1
   - scenario_2
+  - scenario_3
+  - scenario_4
+  - scenario_5
+  - scenario_6
+  - scenario_7
   labels:
     scenario_1: No transmission within the US after 2016
     scenario_2: No LTBI among immigrants after 2016
+    scenario_3: Reduced TB prevention effort
+    scenario_4: Rising MDR-TB in immigrants
+    scenario_5: In-migration held constant
+    scenario_6: Improving global TB control
+    scenario_7: Rising reactivation risks
   formatted: # use |- to include newline characters
     scenario_1: |-
       No transmission within
@@ -155,12 +165,21 @@ analyses:
     scenario_2: |-
       No LTBI among
       immigrants after 2016
-  descriptions:
-    scenario_1: From 2016 onwards, no individuals acquire M. TB infection from transmission within
-      the United States. In this scenario the only source of new LTBI cases is from
-      existing infection in new immigrants.
-    scenario_2: From 2016 onwards, all individuals immigrating to the United States are free of
-      M. TB infection, while maintaining the same total volume of immigration.
+          scenario_3: |-
+      Reduced TB prevention
+      effort
+    scenario_4: |-
+      Rising MDR-TB in
+      immigrants
+    scenario_5: |-
+      In-migration held
+      constant
+    scenario_6: |-
+      Improving global TB
+      control
+    scenario_7: |-
+      Rising reactivation
+      risks
 downloads:
   heading: Download
   labels:
