--- a/utilities/inst/configs/config-agegroups.yaml
+++ b/utilities/inst/configs/config-agegroups.yaml
@@ -46,11 +46,11 @@ populations:
   labels:
     all_populations: Total
     usb_population: US-born
-    fb_population: Foreign-born
+    fb_population: Non-US-born
   formatted:
     all_populations: total US population
     usb_population: US-born population
-    fb_population: foreign-born US population
+    fb_population: non-US-born population
   selected:
   - yes
   - no
@@ -114,7 +114,7 @@ outcomes:
   - no
   - no
 interventions:
-  heading: Intervention scenarios
+  heading: Modeled scenarios
   values:
   - intervention_1
   - intervention_2
@@ -141,7 +141,7 @@ interventions:
       reduced by 50% from current levels
     intervention_5: The combination of all intervention scenarios described above
 analyses:
-  heading: Additional scenarios
+  heading: Sensitivity analyses
   values:
   - scenario_1
   - scenario_2
@@ -152,7 +152,7 @@ analyses:
   - scenario_7
   labels:
     scenario_1: No transmission within the US after 2016
-    scenario_2: No LTBI among immigrants after 2016
+    scenario_2: No TB or LTBI in New Migrants after 2016
     scenario_3: Reduced TB prevention effort
     scenario_4: Rising MDR-TB in immigrants
     scenario_5: In-migration held constant
@@ -163,9 +163,9 @@ analyses:
       No transmission within
       the US after 2016
     scenario_2: |-
-      No LTBI among
-      immigrants after 2016
-          scenario_3: |-
+      No TB or LTBI in new
+      migrants after 2016
+    scenario_3: |-
       Reduced TB prevention
       effort
     scenario_4: |-
