--- a/utilities/inst/configs/config-agegroups.yaml
+++ b/utilities/inst/configs/config-agegroups.yaml
@@ -20,7 +20,7 @@ IDs:
   subtitle: agegroupSubtitle
   plot: agegroupPlot
 comparators:
-  heading: Comparator
+  heading: Comparison
   values:
   - absolute_value
   - pct_basecase_same_year
@@ -114,7 +114,7 @@ outcomes:
   - no
   - no
 interventions:
-  heading: Modeled scenarios
+  heading: Modeled Scenarios
   values:
   - intervention_1
   - intervention_2
@@ -122,11 +122,11 @@ interventions:
   - intervention_4
   - intervention_5
   labels:
-    intervention_1: TLTBI for new immigrants
+    intervention_1: TLTBI for New Immigrants
     intervention_2: Improved TLTBI in the US
-    intervention_3: Better case detection
-    intervention_4: Better TB treatment
-    intervention_5: All improvements
+    intervention_3: Better Case Detection
+    intervention_4: Better TB Treatment
+    intervention_5: All Improvements
   descriptions:
     intervention_1: Provision of LTBI testing and treatment for all new legal immigrants
       entering the US
@@ -141,7 +141,7 @@ interventions:
       reduced by 50% from current levels
     intervention_5: The combination of all intervention scenarios described above
 analyses:
-  heading: Sensitivity analyses
+  heading: Sensitivity Analyses
   values:
   - scenario_1
   - scenario_2
@@ -151,13 +151,13 @@ analyses:
   - scenario_6
   - scenario_7
   labels:
-    scenario_1: No transmission within the US after 2016
-    scenario_2: No TB or LTBI in New Migrants after 2016
-    scenario_3: Reduced TB prevention effort
-    scenario_4: Rising MDR-TB in immigrants
-    scenario_5: In-migration held constant
-    scenario_6: Improving global TB control
-    scenario_7: Rising reactivation risks
+    scenario_1: No Transmission Within the US After 2016
+    scenario_2: No TB or LTBI in New Migrants After 2016
+    scenario_3: Reduced TB Prevention Effort
+    scenario_4: Rising MDR-TB in New Migrants
+    scenario_5: Future Immigration at 2016 Levels
+    scenario_6: Improving Global TB Control
+    scenario_7: Rising Reactivation Risks
   formatted: # use |- to include newline characters
     scenario_1: |-
       No transmission within
