Change label names to reflect scenario renaming.

--- a/utilities/inst/configs/config-agegroups.yaml
+++ b/utilities/inst/configs/config-agegroups.yaml
@@ -170,10 +170,10 @@ analyses:
       effort
     scenario_4: |-
       Rising MDR-TB in
-      immigrants
+      new migrants
     scenario_5: |-
-      In-migration held
-      constant
+      Future immigration
+      at 2016 levels
     scenario_6: |-
       Improving global TB
       control
