--- a/utilities/inst/configs/config-trends.yaml
+++ b/utilities/inst/configs/config-trends.yaml
@@ -182,10 +182,10 @@ analyses:
       effort
     scenario_4: |-
       Rising MDR-TB in
-      immigrants
+      new migrants
     scenario_5: |-
-      In-migration held
-      constant
+      Future immigration at
+      2016 levels
     scenario_6: |-
       Improving global TB
       control
